# domjudge

./: .codeclimate.yml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .lgtm.yml  .php-cs-fixer.php  .phpmd-ruleset.xml  .sastscanrc  .travis.yml  CODINGSTYLE  CODINGSTYLE.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  COPYING.MIT  ChangeLog  INSTALL  INSTALLATION  ISSUE_TEMPLATE.md  Makefile  Makefile.global  Makefile.in  Partial-score.md  README  README.md  SECURITY.md  SYMLINKS  TODO  WHAT  autogen.sh  bootstrap  check-api.sh  codecov.yml  compile_commands.json  composer.json  configure.ac  docker-compose.override.yml  docker-compose.yml  gitlab.sh  (+12 more)
.github/: checks.json  dependabot.yml
coverity/: README.md  components.tsv  modeling.c
debian/: README.Debian  README.source  TODO  changelog  control  copyright  dbpasswords.secret.judgehost  dj_upgrade_chroot  domjudge-common.install  domjudge-common.logrotate  domjudge-doc.doc-base  domjudge-doc.doc-base.admin  domjudge-doc.doc-base.judge  domjudge-domserver.config  domjudge-domserver.dirs  domjudge-domserver.install  domjudge-domserver.links  domjudge-domserver.lintian-overrides  domjudge-domserver.logrotate  domjudge-domserver.postinst  domjudge-domserver.postrm  domjudge-domserver.prerm  domjudge-judgehost.config  domjudge-judgehost.dirs  domjudge-judgehost.examples  domjudge-judgehost.init  domjudge-judgehost.install  domjudge-judgehost.links  domjudge-judgehost.logrotate  domjudge-judgehost.postinst  domjudge-judgehost.postrm  domjudge-judgehost.prerm  domjudge-judgehost.sudoers  domjudge-judgehost.templates  (+1 more)
lib/libcgroup-3.1.0/: .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  Makefile.in  README  README_daemon  README_systemd  aclocal.m4  config.h.in  configure  configure.ac  libcgroup.doxyfile  libcgroup.pc.in  myconfigure
lib/libcgroup-3.1.0/doc/: Makefile.am  Makefile.in
lib/libcgroup-3.1.0/doc/man/: Makefile.am  Makefile.in  cgclassify.1  cgconfig.conf.5  cgconfigparser.8  cgcreate.1  cgdelete.1  cgexec.1  cgget.1  cgred.conf.5  cgrules.conf.5  cgrulesengd.8  cgset.1  cgsnapshot.1  cgxget.1  cgxset.1  lscgroup.1  lssubsys.1
lib/libcgroup-3.1.0/include/: Makefile.am  Makefile.in  libcgroup.h
lib/libcgroup-3.1.0/include/libcgroup/: config.h  error.h  groups.h  init.h  init.h.in  iterators.h  log.h  systemd.h  tasks.h  tools.h
lib/libcgroup-3.1.0/samples/: Makefile.am  Makefile.in
lib/libcgroup-3.1.0/samples/c/: Makefile.am  Makefile.in  create_systemd_scope.c  empty_cgroup_v2.c  get_all_controller.c  get_controller.c  get_mount_point.c  get_procs.c  get_setup_mode.c  get_variable_names.c  logger.c  proctest.c  read_stats.c  setuid.c  test_named_hierarchy.c  walk_task.c  walk_test.c  wrapper_test.c
lib/libcgroup-3.1.0/samples/cmdline/: Makefile.am  Makefile.in
lib/libcgroup-3.1.0/samples/config/: Makefile.am  Makefile.in  cgconfig.conf  cgconfig.sysconfig  cgred.conf  cgrules.conf  cgsnapshot_allowlist.conf  cgsnapshot_denylist.conf  invalid_namespace_config.conf  invalid_namespace_mount_config.conf  namespace_config.conf
lib/libcgroup-3.1.0/samples/python/: Makefile.am  Makefile.in
lib/libcgroup-3.1.0/scripts/: Makefile.am  Makefile.in
lib/libcgroup-3.1.0/scripts/init.d/: cgconfig.in  cgred.in
lib/libcgroup-3.1.0/src/: Makefile.am  Makefile.in  abstraction-common.c  abstraction-common.h  abstraction-cpu.c  abstraction-cpuset.c  abstraction-map.c  abstraction-map.h  api.c  config.c  lex.c  lex.l  libcgroup-internal.h  libcgroup.map  libcgroup_systemd_idle_thread  libcgroup_systemd_idle_thread.c  log.c  parse.c  parse.h  parse.y  systemd.c  wrapper.c
lib/libcgroup-3.1.0/src/daemon/: Makefile.am  Makefile.in  cgrulesengd.c  cgrulesengd.h
lib/libcgroup-3.1.0/src/pam/: Makefile.am  Makefile.in  pam_cgroup.c
lib/libcgroup-3.1.0/src/python/: Makefile.am  Makefile.in  cgroup.pxd  libcgroup.pyx  setup.py
lib/libcgroup-3.1.0/src/tools/: Makefile.am  Makefile.in  cgclassify.c  cgconfig.c  cgcreate.c  cgdelete.c  cgexec.c  cgget.c  cgset.c  cgsnapshot.c  cgxget.c  cgxset.c  lscgroup.c  lssubsys.c  tools-common.c  tools-common.h
lib/libcgroup-3.1.0/tests/: Makefile.am  Makefile.in  README.md
lib/libcgroup-3.1.0/tests/ftests/: 001-cgget-basic_cgget_v1.py  002-cgdelete-recursive_delete.py  003-cgget-basic_cgget_v2.py  004-cgsnapshot-basic_snapshot_v1.py  005-cgsnapshot-basic_snapshot_v2.py  006-cgrules-basic_cgrules_v1.py  007-cgrules-basic_cgrules_v2.py  008-cgget-multiple_r_flags.py  009-cgget-g_flag_controller_only.py  010-cgget-g_flag_controller_and_cgroup.py  011-cgget-r_flag_two_cgroups.py  012-cgget-multiple_r_flags2.py  013-cgget-multiple_g_flags.py  014-cgget-a_flag.py  015-cgget-multiline_r_flag.py  016-cgget-invalid_options.py  017-cgconfig-load_file.py  018-cgconfig-load_dir.py  019-cgconfig-uidgid_dperm_fperm.py  020-cgconfig-tasks_perms_owner.py  021-cgconfig-invalid_options.py  022-cgset-multiple_r_flag.py  023-cgset-copy_from.py  025-cgset-multiple_cgroups.py  026-cgset-multiple_r_multiple_cgroup.py  027-cgset-invalid_options.py  029-lssubsys-basic_lssubsys.py  030-lssubsys-lssubsys_all.py  031-lscgroup-g_flag.py  032-lscgroup-multiple_g_flags.py  033-cgget-no_flags.py  034-cgexec-basic_cgexec.py  035-cgset-set_cgroup_type.py  036-cgset-multi_thread.py  037-cgxget-cpu_settings.py  038-cgxget-cpuset_settings.py  039-pybindings-cgxget.py  040-pybindings-cgxset.py  041-pybindings-library_version.py  042-cgxget-unmappable.py  (+62 more)
lib/libcgroup-3.1.0/tests/gunit/: 001-path.cpp  002-cgroup_parse_rules_options.cpp  003-cg_get_cgroups_from_proc_cgroups.cpp  004-cgroup_compare_ignore_rule.cpp  005-cgroup_compare_wildcard_procname.cpp  006-cgroup_get_cgroup.cpp  007-cgroup_process_v1_mount.cpp  008-cgroup_process_v2_mount.cpp  009-cgroup_set_values_recursive.cpp  010-cgroup_chown_chmod_tasks.cpp  011-cgroupv2_subtree_control.cpp  012-cgroup_create_cgroup.cpp  013-cgroup_build_tasks_procs_path.cpp  014-cgroupv2_get_subtree_control.cpp  015-cgroupv2_controller_enabled.cpp  016-cgset_parse_r_flag.cpp  017-API_fuzz_test.cpp  Makefile.am  Makefile.in  gtest.cpp  libcgroup_unittest.map
(+4436 files in other folders)
